# dbms-project

./: .env.example  README.md  README.txt
backend/: .gitignore  alembic.ini  pyproject.toml  run.ps1
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: auth.py  config.py
backend/app/core/database/: __init__.py  main.py
backend/app/models/: __init__.py  main.py
backend/app/scheduler/: __init__.py  tasks.py
backend/migrations/: env.py
database/: docker-compose.yml
frontend/: .gitignore
